@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.142 2005/06/17 22:33:01 dsalt Exp $
+ * $Id: xine.h.in,v 1.143 2005/07/03 20:31:28 miguelfreitas Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -896,6 +896,12 @@ const char *xine_get_meta_info   (xine_stream_t *stream, int info);
 #define XINE_STREAM_INFO_SKIPPED_FRAMES    27 /* for 1000 frames delivered */
 #define XINE_STREAM_INFO_DISCARDED_FRAMES  28 /* for 1000 frames delivered */
 #define XINE_STREAM_INFO_VIDEO_AFD         29
+#define XINE_STREAM_INFO_DVD_TITLE_NUMBER   30
+#define XINE_STREAM_INFO_DVD_TITLE_COUNT    31
+#define XINE_STREAM_INFO_DVD_CHAPTER_NUMBER 32
+#define XINE_STREAM_INFO_DVD_CHAPTER_COUNT  33
+#define XINE_STREAM_INFO_DVD_ANGLE_NUMBER   34
+#define XINE_STREAM_INFO_DVD_ANGLE_COUNT    35
 
 /* possible values for XINE_STREAM_INFO_VIDEO_AFD */
 #define XINE_VIDEO_AFD_NOT_PRESENT         -1
